--- a/01-cruddemo-student/src/main/resources/application.properties
+++ b/01-cruddemo-student/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username = springstudent
 spring.datasource.password = springstudent
+
+# Turn off springboot banner
+spring.main.banner-mode = off
+
+#reduce logging level - setting to warn - will also log errors if occured
+logging.level.root = warn
