Create DB table using Java Code

--- a/01-cruddemo-student/src/main/resources/application.properties
+++ b/01-cruddemo-student/src/main/resources/application.properties
@@ -5,5 +5,17 @@ spring.datasource.password = springstudent
 # Turn off springboot banner
 spring.main.banner-mode = off
 
-#reduce logging level - setting to warn - will also log errors if occured
+#reduce logging level - setting to warn - will also log errors if occurred
 logging.level.root = warn
+
+#Add logging configs to display sql statements
+##Log SQL statements
+logging.level.org.hibernate.SQL=debug
+##Log values of SQL Statements
+logging.level.org.hibernate.orm.jdbc.bind = trace
+
+# Configure JPA/Hibernate to auto create tables
+spring.jpa.hibernate.ddl-auto=create
+
+
+
